***********************************************************
25/04/2025	10:40	Daniele Chiarion	Create folders to separate the parts of the project
25/04/2025	10:55	Daniele Chiarion	Create a _custom-variables.scss file where to put the variables used for the style of the website
25/04/2025	11:00	Daniele Chiarion	Test structure.scss and style.scss compiled in index.html
25/04/2025	17:55	Daniele Chiarion	Completed navbar for mobile device. Possible graphic effects and icon could be added later. 
26/04/2025	10:59 	Daniele Chiarion	Completed navbar for desktop PC. Possible icons could be added later. 
26/04/2025	15:04	Daniele Chiarion	Completed carousel for home Page. Logos and subtitle could be added later. 
26/04/2025	15:30 	Daniele Chiarion	Started home sections. Add card to complete.
27/04/2025	11:00	Daniele Chiarion	Correct navbar z-index parameter in order to display the collapse menu over the page.
27/04/2025	11:19	Daniele Chiarion	Completed card design and object for cars.
28/04/2025	18:55	Daniele Chiarion	Added home sections and completed car brand card.
29/04/2025	10:23	Daniele Chiarion	Start footer to be completed
29/04/2025	11:19	Daniele Chiarion	Add new navbar for tablet to complete. Possible icons could be added later.
29/04/2025	17:15	Daniele Chiarion	Completed footer.
29/04/2025	18:23	Daniele Chiarion	Completed navbar for tablet devices.
29/04/2025	20:54	Daniele Chiarion	Add last links to the other pages of the site. Completed home-page sections.
30/04/2025	11:12	Daniele Chiarion	Add logo in the head of the site. 
01/05/2025	15:02	Daniele Chiarion	Add icons to the different navbars.
01/05/2025	15:21	Daniele Chiarion	Completed footer part. 
01/05/2025	15:41	Daniele Chiarion	Add terms and conditions page. 
01/05/2025	15:50	Daniele Chiarion	Starting with the car configurator page.
01/05/2025	16:20	Daniele Chiarion	Change the color of the thumb in the range input. 
01/05/2025	17:16	Daniele Chiarion	Completed car configurator page.