@@ -35,7 +35,7 @@
             <nav class="navbar navbar-light bg-light fixed-bottom d-block d-sm-none">
                 <div class="container-fluid d-flex justify-content-between align-items-center">
                 <!-- Home icon -->
-                <a href="index.html" class="navbar-brand m-0 p-0">
+                <a href="../pages/index.html" class="navbar-brand m-0 p-0">
                     <img src="../../img/static/home.svg" alt="Home" class="nav-icon-mobile">
                 </a>
                 <!-- Profile icon -->
@@ -47,7 +47,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <!-- Search - car configurator -->
-                <a href="car-configurator.html" class="navbar-brand m-0 p-0">
+                <a href="../pages/car-configurator.html" class="navbar-brand m-0 p-0">
                     <img src="../../img/static/search.svg" alt="Home" class="nav-icon-mobile">
                 </a>
                 <!-- Dark/Light switch -->
@@ -122,37 +122,37 @@
             <div class="bg-light p-4">
             <li class="d-flex align-items-center link-group_navMobile">
                 <img src="../../img/static/home.svg" class="nav-icon-desktop">
-                <a class="nav-link-mobile" href="home.html">Home</a>
+                <a class="nav-link-mobile" href="../pages/index.html">Home</a>
             </li>
             <li class="d-flex align-items-center link-group_navMobile">
                 <img src="../../img/static/car.svg" class="nav-icon-desktop car-icon_nav">
-                <a class="nav-link-mobile" href="car-configurator.html">Configuratore</a>
+                <a class="nav-link-mobile" href="../pages/car-configurator.html">Configuratore</a>
             </li>
             <li class="d-flex align-items-center link-group_navMobile">
                 <img src="../../img/static/shopping-cart.svg" class="nav-icon-desktop">
-                <a class="nav-link-mobile" href="shopping-cart.html">Vai al carrello</a>
+                <a class="nav-link-mobile" href="../pages/shopping-cart.html">Vai al carrello</a>
             </li>
             <li class="d-flex align-items-center link-group_navMobile">
                 <img src="../../img/static/gift.svg" class="nav-icon-desktop">
-                <a class="nav-link-mobile" href="wish-list.html">Lista dei desideri</a>
+                <a class="nav-link-mobile" href="../pages/wish-list.html">Lista dei desideri</a>
             </li>
             <li class="d-flex align-items-center link-group_navMobile">
                 <img src="../../img/static/dollar.svg" class="nav-icon-desktop">
-                <a class="nav-link-mobile" href="purchase-list.html">Lista degli acquisti</a>
+                <a class="nav-link-mobile" href="../pages/purchase-list.html">Lista degli acquisti</a>
             </li>
     
             <br>
             <li class="d-flex align-items-center link-group_navMobile">
                 <img src="../../img/static/profile.svg" class="nav-icon-desktop">
-                <a class="nav-link-mobile" href="profile.html">Profilo personale</a>
+                <a class="nav-link-mobile" href="../pages/profile.html">Profilo personale</a>
             </li>
             <li class="d-flex align-items-center link-group_navMobile">
                 <img src="../../img/static/profile.svg" class="nav-icon-desktop">
-                <a class="nav-link-mobile" href="login.html">Accedi/Login</a>
+                <a class="nav-link-mobile" href="../pages/login.html">Accedi/Login</a>
             </li>
             <li class="d-flex align-items-center link-group_navMobile">
                 <img src="../../img/static/profile.svg" class="nav-icon-desktop">
-                <a class="nav-link-mobile" href="sign-up.html">Registrati</a>
+                <a class="nav-link-mobile" href="../pages/sign-up.html">Registrati</a>
             </li>
             </div>
         </div>
@@ -179,6 +179,73 @@
             </form>
             </div>
         </nav>
+
+        <br><br><br>
+
+        <div class="container mb-4">
+            <div class="row">
+                <div class="col-12">
+                    <h2>Dettagli macchina</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-5 d-flex align-items-center">
+                    <img src="../../img/variable/fiat-panda.jfif">
+                </div>
+                <div class="col-md-7 d-flex align-items-center">
+
+                </div>
+            </div>
+        </div>
+
+
+        <!-- Footer -->
+        <footer>
+            <div class="container">
+            <div class="row normal-text">
+                <div class="col-md-6 col-lg-3 footer-column">
+                <h5>Autori</h5>
+                <ul class="unordered-list_no-pointed">
+                    <li><a href="https://github.com/danielechiarion" target="_blank" class="footer-link">Daniele Chiarion</a></li>
+                    <li><a href="https://github.com/crepaldimattia" target="_blank" class="footer-link">Mattia Crepaldi</a></li>
+                    <li><a href="https://github.com/DavideFocalors79" target="_blank" class="footer-link">Davide Laghi</a></li>
+                </ul>
+                </div>
+                <div class="col-md-6 col-lg-6 footer-column">
+                <h5 align="center">La scuola</h5>
+                <div class="row">
+                    <div class="col-3 d-flex justify-content-end align-items-center">
+                    <img src="https://iisviolamarchesini.edu.it/wp-content/uploads/2023/10/logo.svg" height="80" width="80">
+                    </div>
+                    <div class="col-9">
+                    <p><a href="https://iisviolamarchesini.edu.it" target="_blank" class="footer-link">IIS Viola Marchesini Rovigo</a></p>
+                    <p>Via De Gasperi 21 - 45100 Rovigo (RO)</p>
+                    </div>
+                </div>
+                </div>
+                <div class="col-md-6 col-lg-3 footer-column">
+                <h5>I nostri servizi</h5>
+                <li><a href="../pages/car-configurator.html" class="footer-link">Configuratore</a></li>
+                <li><a href="../pages/purchase-list.html" class="footer-link">Lista acquisti</a></li>
+                <li><a href="../pages/shopping-cart.html" class="footer-link">Carrello</a></li>
+                <li><a href="../pages/wish-list.html" class="footer-link">Lista dei desideri</a></li>
+                </div>
+            </div>
+            <div class="row normal-text">
+                <div class="col-12 gx-3 mb-3">
+                <a href="../pages/terms-and-conditions.html" class="footer-link">Termini e condizioni d'uso del sito</a>
+                </div>
+            </div>
+            <div class="row normal-text">
+                <div class="col-4 d-flex justify-content-end align-items-center">
+                <img src="../../img/static/logo.svg" height="80" width="80" class="footer-icon">
+                </div>
+                <div class="col-8 d-flex justify-content-start align-items-center">
+                <h1 align="center">Concessionario Laghi</h1>
+                </div>
+            </div>
+            </div>
+        </footer>
 
         <!-- Add .css style files -->
         <link rel="stylesheet" type="text/css" href="../../css/style.css">
